--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -1,2 +1,2 @@
 polar:
-  greeting: "Welcome to the catalog from a fresh config server IV"
+  greeting: "Welcome to the catalog from a fresh config server V"
